Trying New App List Generator

--- a/notebooks/nik.ipynb
+++ b/notebooks/nik.ipynb
@@ -159,8 +159,19 @@
     "parameters = {\"request\": \"all\"}\n",
     "\n",
     "# request 'all' from steam spy and parse into dataframe\n",
+    "temp_dict = []\n",
+    "new_results = True\n",
+    "page = 1\n",
+    "while new_results:\n",
+    "    new_url = url + f\"&page={page}\"\n",
+    "    json_data = get_request(new_url, parameters=parameters)\n",
+    "    new_results = json_data.get(\"results\", [])\n",
+    "    temp_dict.extend(new_results)\n",
+    "    page += 1\n",
+    "    \n",
     "json_data = get_request(url, parameters=parameters)\n",
-    "steam_spy_all = pd.DataFrame.from_dict(json_data, orient='index')\n",
+    "\n",
+    "steam_spy_all = pd.DataFrame.from_dict(temp_dict, orient='index')\n",
     "\n",
     "# generate sorted app_list from steamspy data\n",
     "app_list = steam_spy_all[['appid', 'name']].sort_values('appid').reset_index(drop=True)\n",
